styling updates and snackbar added

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,11 @@
     color: #17a2b8;
 }
 
+#address-link:hover {
+    color: maroon;
+}
+
+
 #information-background {
     background-color: rgba(250,250,250,0.5);
 }
@@ -51,6 +56,7 @@
     max-width: 50vw;
     margin: 0px auto;
     text-align:center;
+    padding: 75px 100px 75px 100px;
 }
 
 #who-is-coming, .table {
@@ -70,7 +76,11 @@
 .table {
     background-color: rgba(250,250,250,0.9);
     background-image: url('../images/networking.png');
-    background-blend-mode: overlay
+    background-blend-mode: overlay;
+}
+
+#attendee-table {
+    margin-bottom: 500px;
 }
 
 .nav-item {
@@ -90,4 +100,55 @@
     color:white;
     font-family: 'Tajawal', sans-serif;
     font-size: 1.2em;
+    position:fixed;
+    left: 0px;
+    bottom: 45px;
 }
+
+/* SNACKBAR */
+
+/* The snackbar - position it at the bottom and in the middle of the screen */
+#snackbar {
+    visibility: hidden; /* Hidden by default. Visible on click */
+    min-width: 250px; /* Set a default minimum width */
+    margin-left: -125px; /* Divide value of min-width by 2 */
+    background-color: tan; /* Black background color */
+    color: #fff; /* White text color */
+    text-align: center; /* Centered text */
+    border-radius: 2px; /* Rounded borders */
+    padding: 16px; /* Padding */
+    position: fixed; /* Sit on top of the screen */
+    z-index: 1; /* Add a z-index if needed */
+    left: 50%; /* Center the snackbar */
+    bottom: 30px; /* 30px from the bottom */
+  }
+  
+  /* Show the snackbar when clicking on a button (class added with JavaScript) */
+  #snackbar.show {
+    visibility: visible; /* Show the snackbar */
+    /* Add animation: Take 0.5 seconds to fade in and out the snackbar. 
+    However, delay the fade out process for 2.5 seconds */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+  
+  /* Animations to fade the snackbar in and out */
+  @-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;} 
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;} 
+    to {bottom: 0; opacity: 0;}
+  }
+  
+  @keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
