--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 <p id='who-is-coming'>Who's coming</p>
-<table class="table">
+<table class="table" id="attendee-table">
     <thead>
         <tr>
             <th scope="col">First</th>
