--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Poiret+One|Tajawal" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
 </head>
@@ -31,16 +32,13 @@
     <div id="carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="./images/front-house.jpg" alt="First slide">
+                <img class="d-block w-100" src="./images/Sz-FrontHouse.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="./images/hedge-facing-backyard.jpg" style="height:100vh" alt="Second slide">
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="./images/house-facing-backyard.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="./images/studio-included.jpg" alt="Third slide">
             </div>
         </div>
     </div>
@@ -49,11 +47,10 @@
             <p class='event-header'>Hanna's Web Development Networking Event</p>
             <p class='event-details'>Come join us for an afternoon of coding discussion and mutual anxiety relief.</p>
             <p class='event-details'>April 20th 3pm-7pm</p>
-            <p class='event-details'>745 18th Street, Santa Monica</p>
+            <a href="https://www.google.com/maps/dir/UCLA+Extension+Gayley+Center,+Gayley+Avenue,+Los+Angeles,+CA/745+18th+St,+Santa+Monica,+CA+90402/@34.0423278,-118.4816989,14z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x80c2bc823d1c6fd5:0xf1d173f312b5d1b!2m2!1d-118.4463684!2d34.0595924!1m5!1m1!1s0x80c2a4b21b05559b:0x3067a87b3a1e672!2m2!1d-118.4915555!2d34.0356565!3e0" target="_blank"><p class='event-details' id="address-link">745 18th Street, Santa Monica</p></a>
         </div>
     </div>
-    {{{body}}}
-    <div id='sign-up-field'>
+        <div id='sign-up-field'>
         <h1>Sign up</h1>
         <form>
             <div class="form-group">
@@ -66,17 +63,19 @@
                 <input type="text" class="form-control" id="item" placeholder="What food/drink will you bring?">
             </div>
             <button type="submit" id='submit' class="btn btn-info">Sign up!</button>
+            <!-- The actual snackbar -->
+            <div id="snackbar">Thank you!</div>
         </form>
         <p id='error-message' class='text-danger' style='display:none'>Please fill out all fields</p>
     </div>
+    
+    {{{body}}}
 
-    <p class='bg-info' id="footer">Questions? Reach out to Hanna on Slack!</p>
+    <p class='bg-info' id="footer">Questions? Reach out to Hanna on <i class="fa fa-slack" style="font-size:15px"></i>Slack Channel: #networking420</p>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
     <script src="/js/app.js"></script>
-       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
