snackbar added and some updates applied

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
                     <a class="nav-link text-white" href="#sign-up-field">Sign Up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#who-is-coming">Who's coming</a>
+                    <a class="nav-link text-white" href="#who-tag">Who's coming</a>
                 </li>
             </ul>
         </div>
@@ -68,8 +68,10 @@
         </form>
         <p id='error-message' class='text-danger' style='display:none'>Please fill out all fields</p>
     </div>
-    
-    {{{body}}}
+
+    <div id="who-tag">
+        {{{body}}}
+    </div>
 
     <p class='bg-info' id="footer">Questions? Reach out to Hanna on <i class="fa fa-slack" style="font-size:15px"></i>Slack Channel: #networking420</p>
 
