--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,9 +54,9 @@
 #sign-up-field {
     padding: 100px;
     max-width: 50vw;
-    margin: 0px auto;
+    margin: 200px auto;
     text-align:center;
-    padding: 75px 100px 75px 100px;
+    /* padding: 100px 100px 400px 100px; */
 }
 
 #who-is-coming, .table {
@@ -70,7 +70,6 @@
     text-shadow: -4px 4px #17a2b8;
     background-color: rgba(250,250,250,0.9);
     margin-bottom: 0px;
-    
 }
 
 .table {
@@ -112,7 +111,7 @@
     visibility: hidden; /* Hidden by default. Visible on click */
     min-width: 250px; /* Set a default minimum width */
     margin-left: -125px; /* Divide value of min-width by 2 */
-    background-color: tan; /* Black background color */
+    background-color: turquoise; /* Black background color */
     color: #fff; /* White text color */
     text-align: center; /* Centered text */
     border-radius: 2px; /* Rounded borders */
