who is coming scrollspy affect updated

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -69,9 +69,9 @@
         <p id='error-message' class='text-danger' style='display:none'>Please fill out all fields</p>
     </div>
 
-    <div id="who-tag">
+    <div id="who-tag"></div>
         {{{body}}}
-    </div>
+    
 
     <p class='bg-info' id="footer">Questions? Reach out to Hanna on <i class="fa fa-slack" style="font-size:15px"></i>Slack Channel: #networking420</p>
 
