updated date of event to include Saturday

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,7 +46,7 @@
         <div id='information-background'>
             <p class='event-header'>Hanna's Web Development Networking Event</p>
             <p class='event-details'>Come join us for an afternoon of coding discussion and mutual anxiety relief.</p>
-            <p class='event-details'>April 20th 3pm-7pm</p>
+            <p class='event-details'>Saturday, April 20th 3pm-7pm</p>
             <a href="https://www.google.com/maps/dir/UCLA+Extension+Gayley+Center,+Gayley+Avenue,+Los+Angeles,+CA/745+18th+St,+Santa+Monica,+CA+90402/@34.0423278,-118.4816989,14z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x80c2bc823d1c6fd5:0xf1d173f312b5d1b!2m2!1d-118.4463684!2d34.0595924!1m5!1m1!1s0x80c2a4b21b05559b:0x3067a87b3a1e672!2m2!1d-118.4915555!2d34.0356565!3e0" target="_blank"><p class='event-details' id="address-link">745 18th Street, Santa Monica</p></a>
         </div>
     </div>
