--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
 #matrix {
     position:absolute;
     opacity:0.1;
-    min-width:100vw;
+    min-width:100%;
 }
 
 #carousel {
@@ -192,4 +192,10 @@
     #sign-up-field h1 {
         background-color:  rgba(250,250,250,0.8);
     }
+}
+
+#map {
+    height: 400px;  /* The height is 400 pixels */
+    width: auto;  /* The width is the width of the web page */
+    margin: 0 15%;
 }
