--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,6 +52,7 @@
                 target="_blank">
                 <p id="address-link">Get Directions</p>
             </a>
+            <div id="map"></div>
         </div>
     </div>
     <div id='sign-up-field'>
@@ -99,6 +100,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAj7EUCJNF9Fdcwx5DxnLMzoEtbvLer-4Y&callback=initMap"></script>
     <script src="/js/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
