Removed api key from view

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -95,7 +95,7 @@
 
     {{{body}}}
 
-    <p class='bg-info' id="footer">{{GOOGLE_API_KEY}}Questions? Reach out to Hanna on <i class="fa fa-slack" style="font-size:15px"></i><strong>Slack</strong>
+    <p class='bg-info' id="footer">Questions? Reach out to Hanna on <i class="fa fa-slack" style="font-size:15px"></i><strong>Slack</strong>
         Channel: #netdev420</p>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
